# mathmeander

./: .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  eslint.config.mjs  justfile  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json
.github/workflows/: ci.yml
crates/core/: Cargo.toml  clippy.toml
crates/core-node/: Cargo.toml  build.rs  package.json  tsconfig.json
crates/core-node/src/: lib.rs
crates/core-node/tests/: addon.test.ts
crates/core-wasm/: Cargo.toml
crates/core-wasm/src/: lib.rs
crates/core/fixtures/v1/: 01-minimal.json  02-full-fields.json  03-unknown-extra-field.json
crates/core/src/: api.rs  error.rs  ids.rs  lib.rs  mathpack.rs  migrate.rs  model.rs  numbering.rs  ops.rs  patch.rs  schema_artifact.rs  validate.rs
crates/core/tests/: annotation.rs  handles.rs  mathpack.rs  migration_harness.rs  notebook.rs  numbering.rs  ownership.rs  properties.proptest-regressions  properties.rs  references.rs  row_relation_sync.rs  sections.rs
crates/schema-gen/: Cargo.toml
crates/schema-gen/src/: main.rs
crates/surface/: Cargo.toml  clippy.toml
crates/surface-wasm/: Cargo.toml
crates/surface-wasm/src/: lib.rs
crates/surface/fixtures/grammar_v1/: call_relation.txt  frac_builtup_call.txt  frac_builtup_group.txt  frac_call.txt  frac_literal_atoms.txt  frac_literal_dydx.txt  prec_div_tighter_than_mul.txt  relation_in.txt  relation_subseteq.txt  script_group.txt  scripts.txt  unary.txt
crates/surface/fixtures/grammar_v2/: blackboard_relation.txt  segmented_dy.txt  segmented_juxtapose.txt  set_builder.txt  string_in_call.txt  string_with_spaces.txt
crates/surface/fixtures/grammar_v3/: blackboard_variant.txt  piecewise_cases.txt  product_times.txt  variant_star.txt
crates/surface/src/: ast.rs  dictionary.rs  grammar.rs  latex.rs  lexer.rs  lib.rs  migrate.rs  normalize.rs  notation.rs  parser.rs  path.rs  render.rs  rewrite.rs  serializer.rs  span.rs  status.rs  syntax.rs
crates/surface/tests/: grammar.proptest-regressions  grammar.rs  grammar_migration.rs  latex.rs  paths.proptest-regressions  paths.rs  rewrite.rs  syntax.rs
db/: schema.sql
db/init/: 00-create-databases.sql
db/migrations/: 0001_foundations.sql  0002_canonical_object_core.sql  0003_deferrable_content_fks.sql  0004_journal_day_detail.sql  0005_row_relation.sql  0006_notebook_detail.sql  0007_notation_home_backfill.sql  0008_deferrable_self_parent_and_position.sql  0009_annotation.sql
docs/: authoring-numbering-citations.md  declarative-representation.md  jsonb-registry.md  mvp_architecture v17.md  mvp_architecture.md  mvp_direction.md  references-and-naming.md  setup.md  structured-math.md
docs/adr/: 0001-initial-setup.md  0002-ownership-operations-pass-b.md
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/tests/: journal-annotation.spec.ts  journal-autosave.spec.ts  journal-blockhandle.spec.ts  journal-blockstart-chrome.spec.ts  journal-edit.spec.ts  journal-math.spec.ts  journal-merge.spec.ts  journal-type.spec.ts  journal.spec.ts  walking-skeleton.spec.ts
scripts/: check-core-deps.sh  lint-migrations.mjs
