# mathmeander-core-wasm — the browser seam over the CORE's pure projections (numbering today; more
# later). Mirrors `crates/surface-wasm`: a thin `cdylib` whose every `#[wasm_bindgen]` fn is a JSON
# delegation into `mathmeander-core`. Keeping wasm-bindgen out of `mathmeander-core` is what keeps the
# core pure + WASM-clean (the cargo-tree / wasm32 purity guards audit `core`, never this wrapper). The
# point: numbering stays single-source (the Rust projection), never reimplemented in TypeScript.
[package]
name = "mathmeander-core-wasm"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mathmeander-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
